dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_transmission_error_during_flow_init_sent.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG grow epoch=8
0:00:00.000000000 [main] DEBUG event=on_send_flow_init prev=Init next=FlowInitSent location=dc/s2n-quic-dc/src/stream/writer.rs:819:21
0:00:00.000000000 [main] DEBUG Sent FlowInit with early data stream_id=42 bytes_read=5 is_fin=false
0:00:00.000000000 [main] DEBUG Transmission failed stream_id=42 reason=TransmissionError
0:00:00.000000000 [main] DEBUG Cannot send reset before flow established stream_id=42
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=FlowInitSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs:660:41
0:00:00.000000000 [main] DEBUG Writer dropping stream_id=42 status=Shutdown next_offset=5 inflight_bytes=0 remote_max_data=0
