dc/s2n-quic-dc/src/snapshots/stream__writer__tests__client_transmission_error_during_queue_init_sent_sends_queue_reset.snap
---
source: dc/s2n-quic-dc/src/testing.rs
expression: logs
---
0:00:00.000000000 [main] DEBUG event=on_init_sent prev=Init next=InitSent location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Sent QueueInit with early data binding_id=1 bytes_read=5 is_fin=false
0:00:00.000000000 [main] DEBUG Transmission failed binding_id=1 reason=TransmissionError
0:00:00.000000000 [main] DEBUG Sent QueueReset binding_id=1 error_code=5 reset_target=Both
0:00:00.000000000 [main] DEBUG event=on_shutdown prev=InitSent next=Shutdown location=dc/s2n-quic-dc/src/stream/writer.rs
0:00:00.000000000 [main] DEBUG Writer dropping binding_id=1 status=Shutdown next_offset=5 inflight_bytes=0 remote_max_data=0
